# ft_medi_01

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  stats.json
conf/base/: catalog.yml  parameters.yml
ft-medi-01/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
ft-medi-01/notebooks/: 01_data_discovery.py
ft-medi-01/src/ft_medi_01/: __main__.py  settings.py
ft-medi-01/src/ft_medi_01/pipelines/data_process/: nodes.py  pipeline.py
ft-medi-01/src/ft_medi_01/pipelines/data_science/: download.py  pipeline.py  train.py
ft-medi-01/tests/pipelines/data_clean/: test_pipeline.py
ft-medi-01/tests/pipelines/dataset_download/: test_pipeline.py
notebooks/: 01_data_discovery.py  02_model_evaluation.py
src/ft_medi_01/: __init__.py
src/ft_medi_01/pipelines/data_process/: __init__.py  nodes.py  pipeline.py
src/ft_medi_01/pipelines/data_science/: download.py  pipeline.py  train.py
tests/: test_run.py
tests/pipelines/data_process/: test_nodes.py
