[tool.poetry]
name = "ft-medi-01"
version = "0.1.0"
description = ""
authors = ["Mike <Mike Watson<mike@brightlabs.ai>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kedro = {extras = ["pandas-csvdataset", "pandas-exceldataset"], version = "^0.19.6"}
ipython = ">=8.10"
jupyterlab = ">=3.0"
kedro-telemetry = ">=0.3.1"
notebook = "*"
transformers = "^4.41.2"
datasets = "^2.19.2"
ipywidgets = "^8.1.3"
kedro-datasets = "^3.0.1"
torch = "^2.3.0"
accelerate = "^0.30.1"
evaluate = "^0.4.2"
peft = "^0.11.1"
kedro-viz = "^9.1.0"

bitsandbytes = "^0.43.1"
[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
commitizen = "^3.27.0"
setuptools = "^70.0.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.project.scripts]
ft-medi-01 = "ft_medi_01.__main__:main"

[tool.kedro]
package_name = "ft_medi_01"
project_name = "ft-medi-01"
kedro_init_version = "0.19.6"
tools = ["None",]
example_pipeline = "False"
source_dir = "src"

[tool.project.entry-points."kedro.hooks"]
